--- a/back/central-reserve/internal/infra/primary/http2/docs/swagger.yaml
+++ b/back/central-reserve/internal/infra/primary/http2/docs/swagger.yaml
@@ -256,6 +256,30 @@ definitions:
     - phone
     - start_at
     type: object
+  request.Room:
+    properties:
+      business_id:
+        type: integer
+      capacity:
+        type: integer
+      code:
+        type: string
+      description:
+        type: string
+      is_active:
+        type: boolean
+      max_capacity:
+        type: integer
+      min_capacity:
+        type: integer
+      name:
+        type: string
+    required:
+    - business_id
+    - capacity
+    - code
+    - name
+    type: object
   request.Table:
     properties:
       business_id:
@@ -317,6 +341,30 @@ definitions:
         type: string
       table_id:
         type: integer
+    type: object
+  request.UpdateRoom:
+    properties:
+      business_id:
+        type: integer
+      capacity:
+        type: integer
+      code:
+        type: string
+      description:
+        type: string
+      is_active:
+        type: boolean
+      max_capacity:
+        type: integer
+      min_capacity:
+        type: integer
+      name:
+        type: string
+    required:
+    - business_id
+    - capacity
+    - code
+    - name
     type: object
   request.UpdateTable:
     properties:
@@ -536,6 +584,8 @@ definitions:
     type: object
   response.LoginResponse:
     properties:
+      require_password_change:
+        type: boolean
       token:
         type: string
       user:
@@ -1175,6 +1225,45 @@ paths:
       summary: Crear negocio
       tags:
       - Business
+  /businesses/{business_id}/rooms:
+    get:
+      consumes:
+      - application/json
+      description: Este endpoint permite obtener todas las salas de un negocio específico.
+      parameters:
+      - description: ID del negocio
+        in: path
+        name: business_id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Lista de salas del negocio
+          schema:
+            additionalProperties: true
+            type: object
+        "400":
+          description: ID de negocio inválido
+          schema:
+            additionalProperties: true
+            type: object
+        "401":
+          description: Token de acceso requerido
+          schema:
+            additionalProperties: true
+            type: object
+        "500":
+          description: Error interno del servidor
+          schema:
+            additionalProperties: true
+            type: object
+      security:
+      - BearerAuth: []
+      summary: Obtiene salas por negocio
+      tags:
+      - Salas
   /businesses/{id}:
     delete:
       consumes:
@@ -2172,6 +2261,219 @@ paths:
       summary: Obtener roles del sistema
       tags:
       - Roles
+  /rooms:
+    get:
+      consumes:
+      - application/json
+      description: Este endpoint permite obtener todas las salas del sistema.
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Lista de salas
+          schema:
+            additionalProperties: true
+            type: object
+        "401":
+          description: Token de acceso requerido
+          schema:
+            additionalProperties: true
+            type: object
+        "500":
+          description: Error interno del servidor
+          schema:
+            additionalProperties: true
+            type: object
+      security:
+      - BearerAuth: []
+      summary: Obtiene todas las salas
+      tags:
+      - Salas
+    post:
+      consumes:
+      - application/json
+      description: Este endpoint permite crear una nueva sala para un negocio.
+      parameters:
+      - description: Datos de la sala
+        in: body
+        name: room
+        required: true
+        schema:
+          $ref: '#/definitions/request.Room'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Sala creada exitosamente
+          schema:
+            additionalProperties: true
+            type: object
+        "400":
+          description: Solicitud inválida
+          schema:
+            additionalProperties: true
+            type: object
+        "401":
+          description: Token de acceso requerido
+          schema:
+            additionalProperties: true
+            type: object
+        "409":
+          description: Sala ya existe para este negocio
+          schema:
+            additionalProperties: true
+            type: object
+        "500":
+          description: Error interno del servidor
+          schema:
+            additionalProperties: true
+            type: object
+      security:
+      - BearerAuth: []
+      summary: Crea una nueva sala
+      tags:
+      - Salas
+  /rooms/{id}:
+    delete:
+      consumes:
+      - application/json
+      description: Este endpoint permite eliminar una sala existente.
+      parameters:
+      - description: ID de la sala
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Sala eliminada exitosamente
+          schema:
+            additionalProperties: true
+            type: object
+        "400":
+          description: ID de sala inválido
+          schema:
+            additionalProperties: true
+            type: object
+        "401":
+          description: Token de acceso requerido
+          schema:
+            additionalProperties: true
+            type: object
+        "404":
+          description: Sala no encontrada
+          schema:
+            additionalProperties: true
+            type: object
+        "500":
+          description: Error interno del servidor
+          schema:
+            additionalProperties: true
+            type: object
+      security:
+      - BearerAuth: []
+      summary: Elimina una sala
+      tags:
+      - Salas
+    get:
+      consumes:
+      - application/json
+      description: Este endpoint permite obtener una sala específica por su ID.
+      parameters:
+      - description: ID de la sala
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Sala encontrada
+          schema:
+            additionalProperties: true
+            type: object
+        "400":
+          description: ID de sala inválido
+          schema:
+            additionalProperties: true
+            type: object
+        "401":
+          description: Token de acceso requerido
+          schema:
+            additionalProperties: true
+            type: object
+        "404":
+          description: Sala no encontrada
+          schema:
+            additionalProperties: true
+            type: object
+        "500":
+          description: Error interno del servidor
+          schema:
+            additionalProperties: true
+            type: object
+      security:
+      - BearerAuth: []
+      summary: Obtiene una sala por ID
+      tags:
+      - Salas
+    put:
+      consumes:
+      - application/json
+      description: Este endpoint permite actualizar una sala existente.
+      parameters:
+      - description: ID de la sala
+        in: path
+        name: id
+        required: true
+        type: integer
+      - description: Datos de la sala
+        in: body
+        name: room
+        required: true
+        schema:
+          $ref: '#/definitions/request.UpdateRoom'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Sala actualizada exitosamente
+          schema:
+            additionalProperties: true
+            type: object
+        "400":
+          description: Solicitud inválida
+          schema:
+            additionalProperties: true
+            type: object
+        "401":
+          description: Token de acceso requerido
+          schema:
+            additionalProperties: true
+            type: object
+        "404":
+          description: Sala no encontrada
+          schema:
+            additionalProperties: true
+            type: object
+        "409":
+          description: Sala ya existe para este negocio
+          schema:
+            additionalProperties: true
+            type: object
+        "500":
+          description: Error interno del servidor
+          schema:
+            additionalProperties: true
+            type: object
+      security:
+      - BearerAuth: []
+      summary: Actualiza una sala
+      tags:
+      - Salas
   /tables:
     get:
       consumes:
