compose in prod

--- a/infra/.env
+++ b/infra/.env
@@ -26,3 +26,7 @@ URL_BASE_SWAGGER=/swagger/
 REACT_APP_API_BASE_URL=http://localhost:3050
 REACT_APP_NAME=Reserve App
 REACT_APP_VERSION=1.0.0
+
+DOMAIN=xn--rup-joa.com
+SSL_CERT_PATH=/etc/letsencrypt/live/xn--rup-joa.com/fullchain.pem
+SSL_KEY_PATH=/etc/letsencrypt/live/xn--rup-joa.com/privkey.pem
