--- a/infra/nginx/Dockerfile
+++ b/infra/nginx/Dockerfile
@@ -3,4 +3,6 @@ FROM nginx:alpine
 COPY nginx.conf /etc/nginx/nginx.conf.template
 COPY entrypoint.sh /entrypoint.sh
 
+RUN chmod +x /entrypoint.sh
+
 ENTRYPOINT ["/entrypoint.sh"]
