--- a/infra/nginx/nginx.conf
+++ b/infra/nginx/nginx.conf
@@ -1,34 +1,49 @@
-server {
-    listen 80;
-    server_name ${DOMAIN};
-    return 301 https://$host$request_uri;
+user  nginx;
+worker_processes  1;
+
+events {
+    worker_connections  1024;
 }
 
-server {
-    listen 443 ssl;
-    server_name ${DOMAIN};
+http {
+    include       mime.types;
+    default_type  application/octet-stream;
 
-    ssl_certificate     ${SSL_CERT_PATH};
-    ssl_certificate_key ${SSL_KEY_PATH};
+    # Puedes agregar aquí directivas http globales si las necesitas
 
-    # Website (landing, etc.)
-    location / {
-        proxy_pass http://website:80;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
+    # Bloque server original
+    server {
+        listen 80;
+        server_name ${DOMAIN};
+        return 301 https://$host$request_uri;
     }
 
-    # Frontend SPA
-    location /app/ {
-        proxy_pass http://frontend:80/;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-    }
+    server {
+        listen 443 ssl;
+        server_name ${DOMAIN};
 
-    # Backend API
-    location /api/ {
-        proxy_pass http://central_reserve:3050/;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
+        ssl_certificate     ${SSL_CERT_PATH};
+        ssl_certificate_key ${SSL_KEY_PATH};
+
+        # Website (landing, etc.)
+        location / {
+            proxy_pass http://website:80;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+        }
+
+        # Frontend SPA
+        location /app/ {
+            proxy_pass http://frontend:80/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+        }
+
+        # Backend API
+        location /api/ {
+            proxy_pass http://central_reserve:3050/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+        }
     }
 }
