--- a/front/reserve_app/.env
+++ b/front/reserve_app/.env
@@ -1,2 +1,3 @@
-# REACT_APP_API_BASE_URL=http://3.91.226.240:3050
-REACT_APP_API_BASE_URL=http://localhost:3050
+# Variables por defecto
+VITE_APP_NAME=Reserve App
+VITE_APP_VERSION=1.0.0
