--- a/front/reserve_app/Dockerfile
+++ b/front/reserve_app/Dockerfile
@@ -2,10 +2,10 @@
 FROM --platform=linux/arm64 node:18-alpine AS builder
 
 # Argumento de build para la URL de la API
-ARG REACT_APP_API_BASE_URL
+ARG VITE_API_BASE_URL
 
 # Establecer la variable de entorno para el build
-ENV REACT_APP_API_BASE_URL=${REACT_APP_API_BASE_URL}
+ENV VITE_API_BASE_URL=${VITE_API_BASE_URL}
 
 # Establecer directorio de trabajo
 WORKDIR /app
@@ -14,7 +14,7 @@ WORKDIR /app
 COPY package*.json ./
 
 # Instalar dependencias
-RUN npm ci
+RUN npm install --legacy-peer-deps
 
 # Copiar el código fuente
 COPY . .
