--- a/infra/nginx/nginx.conf
+++ b/infra/nginx/nginx.conf
@@ -26,7 +26,7 @@ http {
         ssl_certificate_key ${SSL_KEY_PATH};
 
         # Website (landing, etc.)
-        location / {
+        location /trattoria/ {
             proxy_pass http://website:80;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
@@ -40,8 +40,37 @@ http {
         }
 
         # Backend API
-        location /api/ {
+        location /central-reserve/ {
             proxy_pass http://central_reserve:3050/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+
+            # CORS headers
+            add_header 'Access-Control-Allow-Origin' '*' always;
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE' always;
+            add_header 'Access-Control-Allow-Headers' 'Authorization,Content-Type' always;
+
+            # Preflight OPTIONS
+            if ($request_method = 'OPTIONS') {
+                add_header 'Access-Control-Allow-Origin' '*';
+                add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE';
+                add_header 'Access-Control-Allow-Headers' 'Authorization,Content-Type';
+                add_header 'Access-Control-Max-Age' 1728000;
+                add_header 'Content-Length' 0;
+                add_header 'Content-Type' 'text/plain charset=UTF-8';
+                return 204;
+            }
+        }
+
+        # Archivos estáticos del frontend
+        location /static/ {
+            proxy_pass http://frontend:80/static/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+        }
+
+        location /manifest.json {
+            proxy_pass http://frontend:80/manifest.json;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
         }
