--- a/front/reserve_app/Dockerfile
+++ b/front/reserve_app/Dockerfile
@@ -2,10 +2,10 @@
 FROM --platform=linux/arm64 node:18-alpine AS builder
 
 # Argumento de build para la URL de la API
-ARG VITE_API_BASE_URL
+ARG REACT_APP_API_BASE_URL
 
 # Establecer la variable de entorno para el build
-ENV VITE_API_BASE_URL=${VITE_API_BASE_URL}
+ENV REACT_APP_API_BASE_URL=${REACT_APP_API_BASE_URL}
 
 # Establecer directorio de trabajo
 WORKDIR /app
