--- a/infra/compose-prod/docker-compose.yaml
+++ b/infra/compose-prod/docker-compose.yaml
@@ -34,6 +34,8 @@ services:
     container_name: frontend_prod
     ports:
       - "8080:80"
+    environment:
+      REACT_APP_API_BASE_URL: "${REACT_APP_API_BASE_URL:-https://www.xn--rup-joa.com/central-reserve}"
     restart: unless-stopped
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:80/"]
