--- a/front/reserve_app/.env.production
+++ b/front/reserve_app/.env.production
@@ -1,2 +1,2 @@
 # Variables para producción
-REACT_APP_API_BASE_URL=https://www.xn--rup-joa.com/central-reserve
+REACT_APP_API_BASE_URL=https://www.xn--rup-joa.com/api
