--- a/infra/compose-prod/docker-compose.yaml
+++ b/infra/compose-prod/docker-compose.yaml
@@ -35,7 +35,7 @@ services:
     ports:
       - "8080:80"
     environment:
-      REACT_APP_API_BASE_URL: "${REACT_APP_API_BASE_URL:-https://www.xn--rup-joa.com/central-reserve}"
+      REACT_APP_API_BASE_URL: "${REACT_APP_API_BASE_URL}"
     restart: unless-stopped
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:80/"]
