--- a/infra/nginx/nginx.conf
+++ b/infra/nginx/nginx.conf
@@ -24,6 +24,9 @@ http {
 
         ssl_certificate     ${SSL_CERT_PATH};
         ssl_certificate_key ${SSL_KEY_PATH};
+        
+        # Evitar que nginx busque archivos estáticos por defecto
+        root /dev/null;
 
         # Website (landing, etc.)
         location /trattoria/ {
@@ -33,15 +36,14 @@ http {
         }
 
         # Frontend SPA
-        location /app/ {
+        location / {
             proxy_pass http://frontend:80/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
         }
 
-        # Backend API
-        location /central-reserve/ {
-            proxy_pass http://central_reserve:3050/;
+        location /api/ {
+            proxy_pass http://central_reserve:3050/api/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
 
@@ -50,7 +52,6 @@ http {
             add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE' always;
             add_header 'Access-Control-Allow-Headers' 'Authorization,Content-Type' always;
 
-            # Preflight OPTIONS
             if ($request_method = 'OPTIONS') {
                 add_header 'Access-Control-Allow-Origin' '*';
                 add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE';
@@ -61,6 +62,8 @@ http {
                 return 204;
             }
         }
+
+      
 
         # Archivos estáticos del frontend
         location /static/ {
