--- a/infra/nginx/nginx.conf
+++ b/infra/nginx/nginx.conf
@@ -35,13 +35,14 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
         }
 
-        # Frontend SPA
-        location / {
-            proxy_pass http://frontend:80/;
+        # Ruta de prueba para verificar que el backend responde
+        location = /ping {
+            proxy_pass http://central_reserve:3050/ping;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
         }
 
+        # API routes (debe ir antes que la ruta general /)
         location /api/ {
             proxy_pass http://central_reserve:3050/api/;
             proxy_set_header Host $host;
@@ -63,7 +64,38 @@ http {
             }
         }
 
-      
+
+
+        # Swagger documentation (debe ir antes que la ruta general /)
+        location ~ ^/docs(/.*)?$ {
+            # Log para debug
+            access_log /var/log/nginx/docs_access.log;
+            error_log /var/log/nginx/docs_error.log;
+            
+            # Proxy para Swagger UI y sus archivos estáticos
+            proxy_pass http://central_reserve:3050;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            
+            # Headers adicionales para archivos estáticos
+            proxy_set_header Accept-Encoding gzip;
+            proxy_buffering off;
+            proxy_cache off;
+            
+            # Timeouts más largos para debug
+            proxy_connect_timeout 30s;
+            proxy_send_timeout 30s;
+            proxy_read_timeout 30s;
+        }
+
+        # Frontend SPA (ruta general - debe ir al final)
+        location / {
+            proxy_pass http://frontend:80/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+        }
 
         # Archivos estáticos del frontend
         location /static/ {
