--- a/mobile/rupu/pubspec.yaml
+++ b/mobile/rupu/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.8
   go_router: ^16.0.0
   get: ^4.7.2
+  dio: ^5.8.0+1
+  flutter_secure_storage: ^9.2.4
 
 dev_dependencies:
   flutter_test:
