--- a/front/reserve_app/.gitignore
+++ b/front/reserve_app/.gitignore
@@ -10,13 +10,18 @@
 
 # production
 
+# environment variables
+.env
+.env.local
+.env.development
+.env.development.local
+.env.test
+.env.test.local
+.env.production
+.env.production.local
 
 # misc
 .DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
 
 npm-debug.log*
 yarn-debug.log*
