📚 Agregar actualizando .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -45,8 +45,11 @@ go.work.sum
 # Entornos
 .env
 .env.local
+.env.development
 .env.development.local
+.env.test
 .env.test.local
+.env.production
 .env.production.local
 
 # IDEs y editores
