--- a/front/website/.gitignore
+++ b/front/website/.gitignore
@@ -15,7 +15,13 @@ pnpm-debug.log*
 
 # environment variables
 .env
+.env.local
+.env.development
+.env.development.local
+.env.test
+.env.test.local
 .env.production
+.env.production.local
 
 # macOS-specific files
 .DS_Store
